add_subdirectory(example01_problem)
add_subdirectory(example02_problem)
add_subdirectory(example03_problem)
add_subdirectory(example04_problem)
add_subdirectory(example05_problem)
add_subdirectory(example06_problem)
add_subdirectory(example07_problem)
add_subdirectory(example08_problem)
add_subdirectory(example09_problem)
add_subdirectory(example10_problem)
add_subdirectory(example11_problem)
add_subdirectory(example12_problem)
add_subdirectory(example13_problem)
add_subdirectory(example14_problem)
add_subdirectory(example15_problem)
add_subdirectory(example16_problem)
add_subdirectory(example17_problem)
add_subdirectory(example18_problem)
add_subdirectory(example19_problem)
add_subdirectory(example20_problem)
add_subdirectory(example21_problem)
add_subdirectory(example22_problem)
add_subdirectory(example23_problem)
add_subdirectory(example24_problem)
add_subdirectory(example25_problem)